Bugfix jumpy logo container

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
 }
 .logo-container {
   position: absolute;
-  top: 25%;
+  top: 25vh;
   left: 0;
   right:0;
   padding: 1rem 0;
